<resources>
    <string name="app_name">TecJob_Final</string>

    <string name="title_activity_referencia_">Referencia_Activity</string>
    <string name="correo_Usuario">Ingrese su Correo Electrónico</string>
    <string name="txtBottom_Confirmar">Confirmar Usuario</string>
    <string name="password">Ingresa tu Contraseña</string>
    <string name="txtBottom_Inicio_Sesion">Iniciar Sesión</string>
    <string name="textView_Toast_Recupera">Olvidaste tu Contraseña?</string>
    <string name="title_DetalleVacante">Detalle Vacante</string>

    <string name="item_infor_personal">Información Personal</string>
    <string name="item_procesos">Procesos</string>
    <string name="item_notificaciones">Notificaciones</string>
    <string name="item_mensajes">Mensajes</string>
    <string name="item_contactanos">Contactanos</string>
    <string name="item_cerrarSesion">Cerrar Sesión</string>
    <string name="item_home">Home</string>
    <string name="title_toolbal_inicio_sesion">Confirmar tu Contraseña</string>
    <string name="textView_nom_Empresa">Sams Club Puerto Vallarta</string>
    <string name="textView_VacanteDispo">Demostrador</string>
    <string name="textView_tiempoVacan">2</string>

    <string name="txt_titleVacante">Vacante: </string>
    <string name="txt_fechaPublicado">Publicado:</string>
    <string name="textView_cantidadVacantes">4</string>
    <string name="txt_Postulate">Postúlate</string>
    <string name="textView_tiempoVacantes">Días</string>
    <string name="txt_publicado_vacante">Publicado:</string>
    <string name="btn_guardarVacant">Postulate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_frag_infoPerso">INFORMACIÓN PERSONAL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nomAlum_blank_fragment">Julio Cesar</string>
    <string name="noControl_blank_fragment">No Control:</string>
    <string name="textView_NoControl">17021910</string>
    <string name="textView_Carrera_blank_fragment">Ing. En Sistemas Computacionales</string>

    <string name="tab_hom_tittle">Home</string>
    <string name="tab_Vistas_tittle">Guardadas</string>
    <string name="nav_comunicate">Comunícate</string>
    <string name="txt_disponibleVacante">Vacante:</string>
    <string name="lorem">Facilidad de palabra, buena atención al cliente, muy amable, carimático, gusto por las ventas. Y solo mas información de relleno para que no se vea tan vacia esta vista de nuestra applicación.</string>
    <string name="subtituloVacanteDetalle">Ven y se parte de nuestro equipo Evolve</string>
    <string name="txtBottom_Postulate">Postúlate</string>
    <string name="user_Alumno">Julio Cesar</string>
    <string name="txt_miPerfil">Mi Perfil</string>
    <string name="nombre_Alumno">Julio Cesar Camacho Silva</string>
    <string name="numeroControlAlumn">17021910</string>
    <string name="nombre_Carrera">Isc</string>
    <string name="txt_mis_datosPerso">Mis Datos Personales</string>
    <string name="domicilio_Alumn">San Clemente de Lima, Nay</string>
    <string name="textView_TituloCardAlumno">Mi Perfil</string>
    <string name="txt_infoLaboral">Información Laboral</string>
    <string name="height_cardInfoMiperfil">400dp</string>
    <string name="txt_NoControl">No. Control</string>
    <string name="txt_nomAlumno">Nombre Completo</string>
    <string name="textView_nomAlumno">Julio Cesar</string>
    <string name="txt_Apellidos">Apellidos</string>
    <string name="textView_Apellidos">Camacho Silva</string>
    <string name="txt_Carrera">Carrera</string>
    <string name="txt_Semestre">Semestre</string>
    <string name="textView_Semestre">Sexto Semestre</string>
    <string name="txt_FechaNacimiento">Fecha de Nacimiento</string>
    <string name="txt_Turno">Turno</string>
    <string name="textView_Turno">Matutino</string>
    <string name="textView_FechaNacimiento">26/06/2019</string>
    <string name="txt_Edad">Edad</string>
    <string name="textView_Edad">23</string>
    <string name="txt_NumeroCel">Número Telefónico</string>
    <string name="textView_NumeroCel">4531260729</string>
    <string name="txt_Correo">Correo</string>
    <string name="textView_Correo">Silva.jc@gmail.com</string>
    <string name="txt_Colonia">Colonia</string>
    <string name="textView_Colonia">Hollywood Nay.</string>
    <string name="txt_Calle">Calle</string>
    <string name="textView_Calle">San Salvador #46</string>
    <string name="txt_EstatusTrabajo">Trabajas Actualmente?</string>
    <string name="textView_EstatusTrabajo">Si</string>
    <string name="txt_Experiencia_Laboral">Experiencia Laboral</string>
    <string name="textView_Experiencia">En ventas, chofer..</string>
    <string name="txt_Habilidades">Habilidades:</string>
    <string name="textView_Habilidades">Facilidad de palabra,</string>
    <string name="txt_HorarioDispo">Horario Disponible</string>
    <string name="textView_HorarioDispo">Solo los fines de semana</string>
    <string name="textView_EstatusPostulado">Aceptado</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="txtBottom_Modificar">Modificar</string>
    <string name="imagenEmpresa">Imagen de la empresa</string>
    <string name="title_activity_menu_principal">Publicaciones</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_perfil">Perfil</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_procesos">Procesos</string>
    <string name="menu_contacto">Contactanos</string>
    <string name="menu_cerrarsesion">Cerrar Sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactos">Contactos:</string>
    <string name="name_Leti">Leticia Velarde</string>
    <string name="name_rebe">Rebeca Anaya</string>
    <string name="telefonos">Telefonos:</string>
    <string name="num_leti">322 1511045</string>
    <string name="num_rebe">322 1531933</string>
    <string name="correosElectr">Correo Electronico:</string>
    <string name="correoLeti">leticia.velarde@vallarta.tecmm.edu.mx</string>
    <string name="correoRebe">rebeca.anaya@vallarta.tecmm.edu.mx</string>
    <string name="MiPerfil">Mi Perfil</string>
    <string name="noControl">No. Control</string>
    <string name="name">Nombre Completo</string>
    <string name="carrera">Carrera:</string>
    <string name="semestre">Semestre:</string>
    <string name="turno">Turno:</string>
    <string name="rb_matutino">Matutino</string>
    <string name="rb_vespertino">Vespertino</string>
    <string name="rb_mixto">Mixto</string>
    <string name="txt_misDatosPersonals">Mis Datos Personales</string>
    <string name="hbd">Fecha de Nacimiento</string>
    <string name="age">Edad</string>
    <string name="phoneNumber">Número de Telefóno</string>
    <string name="colony">Colonia</string>
    <string name="street">Calle y número</string>
    <string name="status_job">Trabaja Actualmente?</string>
    <string name="rb_si">Si</string>
    <string name="rb_no">No</string>
    <string name="txt_misDatosLaborales">Información Laboral</string>
    <string name="experience">Experiencia</string>
    <string name="skills">Habilidades</string>
    <string name="scheduleAvailabe">Horario Disponible (medio tiempo, fin de semana...)</string>
    <string name="btn_edidat">Editar</string>
    <string name="btn_save">Guardar</string>
    <string name="nss">Número De Seguro Social</string>
    <string name="txt_nocontroll">17021910</string>
    <string name="txt_carrer">ISC</string>
    <string name="txt_recuperaContra">Recuperar Tu Contraseña</string>
    <string name="btn_reset">Enviar</string>
    <string name="nomVacane">Gerente</string>
    <string name="txt_sueldo">Salario:</string>
    <string name="salario">$6,000.00</string>
    <string name="txt_horario">Horario:</string>
    <string name="txt_horarioJob">Medio Tiempo</string>
    <string name="domicilio_empresa">Domicilio:</string>
    <string name="txt_domicilioEmpresa">Blvrd Francisco Medina Ascencio 2880, Puerto Vallarta, 48290</string>
    <string name="superMercado">Super Mercado</string>
    <string name="numero_empresa">Contactanos:</string>
    <string name="txt_numEmpresa">3221234567</string>
    <string name="txt_vacante">Cajero</string>
    <string name="descripcion">Garantizar las operaciones de una unidad de caja, efectuando actividades de recepción, entrega y custodia de dinero en efectivo, cheques, giros y demás documentos de valor, a fin de lograr la recaudación de ingresos a la institución y la cancelación de los pagos que correspondan a través de caja.</string>
    <string name="txt_habilid">Habilidades en Matemáticas</string>
    <string name="txt_requisitos">Requisitos:</string>
    <string name="txt_requisit">Habilidad para comunicarte, Aptitud para las matemáticas, ser una persona observadora, capacidad para aprender</string>
    <string name="txt_salario">$7000.00</string>
    <string name="btn_postulate">Postulate</string>
    <string name="default_notification_channel_id">default channel id</string>
    <string name="txt_nuevaContra">Al restablecer tu contraseña tiene que tener como minimo 8 caracteres de lo contrario no podrás accesar a la aplicación</string>
    <string name="txt_nota">Nota:</string>
    <string name="txt_toqueParaLlamar">Toque para llamar</string>


</resources>
