<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ScrollView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="@dimen/marginTop_Schroll_perfil_10"
        android:background="@drawable/background_tbn_borde">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/marginTop_alTitle_20"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/marginTop_Modificar_10"
            android:paddingEnd="@dimen/marginTop_Modificar_10"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagenInfoPersonal"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:elevation="@dimen/elevation_4"
                android:paddingTop="@dimen/paddingTop_imgPerfil_8"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginTop_subtitles_perfil_20"
                android:text="@string/MiPerfil"
                android:textSize="@dimen/subtitles_perfil_25"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/width_viewLineaContac_315"
                android:layout_height="@dimen/height_viewLineaContac_1"
                android:layout_below="@id/txt_telefonos"
                android:layout_gravity="center"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/edtVw_ControlNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="No. Control"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/edtVw_NameHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_alTitle_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carrera"
                    android:textSize="@dimen/font_Size_Perfil_20" />

                <Spinner
                    android:id="@+id/spVw_Carrera"
                    android:layout_width="@dimen/width_sp_carreras_215"
                    android:layout_height="@dimen/height_42"
                    android:layout_marginStart="@dimen/marginStart_spCarrera_50"
                    android:textSize="@dimen/font_Size_Perfil_20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_alTitle_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semestre"
                    android:textSize="@dimen/font_Size_Perfil_20" />

                <Spinner
                    android:id="@+id/spVw_Semestre"
                    android:layout_width="@dimen/width_sp_carreras_215"
                    android:layout_height="@dimen/height_42"
                    android:layout_marginStart="@dimen/marginStart_spSemestre_30"
                    android:textSize="@dimen/font_Size_Login_20" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_alTitle_20"
                android:text="@string/turno"
                android:textSize="@dimen/font_Size_Login_20" />

            <RadioGroup
                android:id="@+id/radioGroupTurno"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_Campos_Perfil_40"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbVw_Matutino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:focusable="false"
                    android:text="@string/rb_matutino"
                    android:textSize="@dimen/font_Size_Login_20" />

                <RadioButton
                    android:id="@+id/rbVw_Vespertino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:focusable="false"
                    android:text="@string/rb_vespertino"
                    android:textSize="@dimen/font_Size_Login_20" />

                <RadioButton
                    android:id="@+id/rbVw_Mixto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:focusable="false"
                    android:text="@string/rb_mixto"
                    android:textSize="@dimen/font_Size_Login_20" />

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginTop_Perfil_30"
                android:text="@string/txt_misDatosPersonals"
                android:textSize="@dimen/subtitles_perfil_25"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/width_viewLineaContac_315"
                android:layout_height="@dimen/height_viewLineaContac_1"
                android:layout_gravity="center"
                android:background="@color/colorPrimary" />


            <TextView
                android:id="@+id/edtVw_HBD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hbd"
                android:textColor="@color/colorGray1" />


            <TextView
                android:id="@+id/edtVw_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/age"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/edtVw_NSS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/nss"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/edtVw_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/phoneNumber"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/edtVw_Colony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/colony"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/edtVw_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/street"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_Modificar_10"
                android:text="@string/status_job"
                android:textSize="@dimen/font_Size_Login_20" />

            <RadioGroup
                android:id="@+id/radioGroup_Status"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_Campos_Perfil_40"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rbVw_Si"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:focusable="false"
                    android:text="@string/rb_si"
                    android:textSize="@dimen/font_Size_Login_20" />

                <RadioButton
                    android:id="@+id/rbVw_No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:focusable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/rb_no"
                    android:textSize="@dimen/font_Size_Login_20" />
            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginTop_Perfil_30"
                android:text="@string/txt_misDatosLaborales"
                android:textSize="@dimen/subtitles_perfil_25"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/width_viewLineaContac_315"
                android:layout_height="@dimen/height_viewLineaContac_1"
                android:layout_gravity="center"
                android:background="@color/colorPrimary" />


            <TextView
                android:id="@+id/edtVw_Experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/experience"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/edtVw_skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/skills"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/edtVw_scheduleAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/scheduleAvailabe"
                android:textColor="@color/colorGray1"
                android:textSize="20dp" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnVw_Modificar_Perfil"
        android:layout_width="@dimen/width_btn_modify_150"
        android:layout_height="@dimen/width_btn_modify_40"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:background="@drawable/selecter_btn_login"
        android:shadowColor="@android:color/black"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="15"
        android:text="@string/btn_edidat"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_Size_txtContacto_17" />


</LinearLayout>