<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimaryDark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagenInfoPersonal"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:elevation="@dimen/elevation_4"
        android:src="@drawable/ic_camera"
        android:layout_marginStart="@dimen/marginStart_imgDesple_2"
        />

    <TextView
        android:id="@+id/txtVw_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noControl"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            />
        <TextView
            android:id="@+id/txtVw_noControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nocontroll"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/marginStart_txt_desplegable_5"
            android:textSize="11sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Carrera"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            />

        <TextView
            android:id="@+id/txtVw_carrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_carrer"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/marginStart_txt_desplegable_5"
            android:textSize="10sp"
            />

    </LinearLayout>

</LinearLayout>
